--- a/package.json
+++ b/package.json
@@ -24,6 +24,17 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/code": "^2.9.0",
+    "@editorjs/editorjs": "^2.29.0",
+    "@editorjs/embed": "^2.7.0",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/image": "^2.9.0",
+    "@editorjs/inline-code": "^1.5.0",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^1.9.0",
+    "@editorjs/paragraph": "^2.11.3",
+    "@editorjs/table": "^2.3.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -47,6 +58,7 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@tanstack/react-query": "^5.28.4",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "bcryptjs": "^2.4.3",
@@ -62,11 +74,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-textarea-autosize": "^8.5.3",
     "react-wrap-balancer": "^1.1.0",
     "resend": "^3.2.0",
     "rimraf": "^5.0.5",
     "sass": "^1.71.1",
     "sonner": "^1.4.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
@@ -77,6 +91,7 @@
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
