feat: add show workspaces in faculty

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "cmdk": "^1.0.0",
+    "editorjs-react-renderer": "^3.5.1",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.356.0",
