feat: show/create faculty's workspace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
   "include": [
     ".eslintrc.cjs",
     "next-env.d.ts",
+    "src/types/prisma-json.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
