--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -65,14 +66,17 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "cmdk": "^1.0.0",
-    "editorjs-react-renderer": "^3.5.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.356.0",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.3.0",
+    "prisma-json-types-generator": "^3.0.4",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-textarea-autosize": "^8.5.3",
