--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.11",
     "prisma-json-types-generator": "^3.0.4",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
