--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "filepond": "^4.30.6",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "lucide-react": "^0.356.0",
     "moment": "^2.30.1",
     "next": "^14.1.0",
@@ -84,6 +88,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.51.0",
     "react-textarea-autosize": "^8.5.3",
     "react-wrap-balancer": "^1.1.0",
