--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.356.0",
     "moment": "^2.30.1",
     "next": "^14.1.0",
