--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@editorjs/paragraph": "^2.11.3",
     "@editorjs/table": "^2.3.0",
     "@hookform/resolvers": "^3.3.4",
+    "@lexical/react": "^0.14.3",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -79,6 +80,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
     "jszip": "^3.10.1",
+    "lexical": "^0.14.3",
     "lucide-react": "^0.356.0",
     "moment": "^2.30.1",
     "next": "^14.1.0",
