--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "0.0.16",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
     "@t3-oss/env-nextjs": "^0.9.2",
@@ -87,10 +88,12 @@
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.11",
+    "nodemailer": "^6.9.13",
     "prisma-json-types-generator": "^3.0.4",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
+    "react-email": "2.1.1",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.51.0",
     "react-textarea-autosize": "^8.5.3",
@@ -109,6 +112,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.30",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
